INTEGRATED 3DuF: disabled pointer events for canvas and set to dimensions of page; Fixed JSON upload; Button labels can be clicked through; No more need for SVG upload; TO BE DONE NEXT: Fix spacing of valve buttons, button labels, and canvas, fix SerialCommunication Bugs, and Bootstrap Entire Fluigi Page

--- a/public/stylesheets/main_fluigi.css
+++ b/public/stylesheets/main_fluigi.css
@@ -12,9 +12,10 @@ body {
 }
 
 
-canvas {
-    margin-top: 220px;
-}
+/*canvas {*/
+    /*padding-top: 220px;*/
+/*}*/
+
 
 
 .clear_button{
@@ -186,4 +187,28 @@ ul {
     padding: 0 8px;
     border-radius: 4px;
     cursor: pointer;
+}
+
+
+#c {
+    width: 100% !important;
+    height: 100% !important;
+    pointer-events:none;
+    margin-top: 90px;
+}
+
+.hidden-block {
+    visibility: hidden;
+    opacity: 0;
+}
+
+main {
+    /*padding-top: 20px;*/
+}
+
+#uploadIcon {
+    width: 100%;
+    position: fixed;
+    bottom: 20px;
+    right: -20px;
 }
